# QuarterLang

./: ANSI.qtr  BONUS_ASSET_INTEGRATIONS_(runtime-injectable).json  Build_Instructions.sh  CMakeLists.txt  CommandProcessor.qtr  Config.qtr  CoreDispatcher.qtr  DGDebugger.qtr  DGEngine.hpp  DG_debugger_capsule_version.qtr  Directory_Structure.css  DodecaGrams.md  ExpressionParser.qtr  GraphRenderer.qtr  IRIntrospector.qtr  InterpreterEngine.qtr  Introspection.qtr  JITCompiler.qtr  Output.qtrcapsule  PluginManager.qtr  PluginStoreFetcher.qtr  Project_Architecture_Overview.sh  Prompt.qtr  Pseudocode_QuarterLang.qtr  QTRCreativeCanvas.hpp  QTRScriptEngine.hpp  QuarterLAng_Compiler.qtr  QuarterLang_AST.qtr  QuarterLang_Adapter.qtr  QuarterLang_BinaryEmitter.qtr  QuarterLang_Binder.qtr  QuarterLang_CodeGenerator.qtr  QuarterLang_Compiler.qtr  QuarterLang_Compiler_Pipeline.cpp  QuarterLang_Composer.qtr  QuarterLang_Encapsulation.qtr  QuarterLang_ErrorHandler.qtr  QuarterLang_Filer.qtr  QuarterLang_Formatter.qtr  QuarterLang_IO.qtr  (+44 more)
Arenas/: Compiler.py  Memory_inspector_runtime.py  combiner.sh  core_api.py  core_archetecture.py  core_structure.py  logging_hook.py  pointer_simulation.py  snapshot_api.py
CPP/: quarterlang_transpiler.cpp
Plugins/: ConsoleUI.qtr  EchoPlugin.qtr  GraphRenderer.qtr  Load.qtr  Manifest_Template_Generator.qtr  NetworkSync.qtr  PluginDashboard.qtr  PluginInspectorSDL.qtr  PluginInspectorWeb.qtr  PluginManifest.qtr  PluginRepoSync.qtr  PluginSettings.qtr  PluginStoreFetcher.qtr  PluginSystem.qtr  QuarterUI.qtr  integration_and_useage.qtr  (+1 more)
(+3 files in other folders)
